Configuração de links/css

--- a/YAMAM-PI-main/src/pages/listaUsuarios.html
+++ b/YAMAM-PI-main/src/pages/listaUsuarios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+    <link rel="stylesheet" href="../../public/css/listaUsuarios.css">
     <title>Lista de Usuários</title>
 </head>
 
@@ -28,7 +28,7 @@
             </tbody>
         </table>
 
-        <a href="adionar o caminho para a tela de AddUser.html" class="button">Cadastrar Novo Usuário</a>
+        <a href="../../../YAMAM-PI-main/Tele de Grid_Usuarios/AdicionaUser/AddUser.html" class="button">Cadastrar Novo Usuário</a>
     </div>
 
     <script src="listaUsuarios.js"></script>
