Button visualize products

--- a/src/pages/ListaProdutos/listaProdutos.html
+++ b/src/pages/ListaProdutos/listaProdutos.html
@@ -25,6 +25,7 @@
                     <th>Status</th>
                     <th>Hab/Des</th>
                     <th>Alterar</th>
+                    <th>Visualizar produto</th>
                 </tr>
             </thead>
             <tbody id="userTableBody">
