--- a/src/pages/Home/index.html
+++ b/src/pages/Home/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sytle.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Home Page</title>
 </head>
 
-<body>
+<body onload="loadData()">
     <header class="header">
         <!--Logo-->
         <a href="#" class="logo">
@@ -56,7 +56,7 @@
         <h1 class="heading"> Novos <span>Produtos</span> </h1>
 
         <div class="box-container">
-
+<!-- 
                 <div class="box">
                     <div class="icons">
                         <a href="#" class="fas fa-shopping-cart"></a>
@@ -87,6 +87,96 @@
                         <button type="submit">Compra</button>
                     </div>
                 </div>
+                <div class="box">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <div class="image">
+                        <img src="7.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Logo Yamam</h3>
+                        <div class="price">R$15.99 <span>R$20.99</span></div>
+                        <button type="submit">Compra</button>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <div class="image">
+                        <img src="7.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Logo Yamam</h3>
+                        <div class="price">R$15.99 <span>R$20.99</span></div>
+                        <button type="submit">Compra</button>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <div class="image">
+                        <img src="7.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Logo Yamam</h3>
+                        <div class="price">R$15.99 <span>R$20.99</span></div>
+                        <button type="submit">Compra</button>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <div class="image">
+                        <img src="7.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Logo Yamam</h3>
+                        <div class="price">R$15.99 <span>R$20.99</span></div>
+                        <button type="submit">Compra</button>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <div class="image">
+                        <img src="7.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Logo Yamam</h3>
+                        <div class="price">R$15.99 <span>R$20.99</span></div>
+                        <button type="submit">Compra</button>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <div class="image">
+                        <img src="7.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Logo Yamam</h3>
+                        <div class="price">R$15.99 <span>R$20.99</span></div>
+                        <button type="submit">Compra</button>
+                    </div>
+                </div> -->
                
 
 
