Fix: organizando a estrutura de pastas

--- a/src/pages/Home/Admin/telaPrincipal.html
+++ b/src/pages/Home/Admin/telaPrincipal.html
@@ -13,8 +13,8 @@
         <div class="options">
             <!-- Para Administrador -->
             <!-- Só mostrar se o usuário for Administrador -->
-            <a href="../ListaProdutos/listaProdutos.html" id="link_products">Listar Produtos</a>
-            <a href="../ListUsers/listaUsuarios.html">Listar Usuários</a>
+            <a href="../../ListaProdutos/listaProdutos.html" id="link_products">Listar Produtos</a>
+            <a href="../../ListUsers/listaUsuarios.html">Listar Usuários</a>
     
             <!-- Para Estoquista -->
             <!-- Só mostrar se o usuário for Estoquista -->
