--- a/src/pages/Home/index.html
+++ b/src/pages/Home/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <!--Logo-->
         <a href="#" class="logo">
-            <img src="7.png" alt="">
+            <img src="../../main/resources/static/images/7.png" alt="">
         </a>
 
         <!--Iniciando os icones na tela-->
