add js telaDetalhes

--- a/src/pages/Carrinho/Carrinho.html
+++ b/src/pages/Carrinho/Carrinho.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrossel de Fotos</title>
+    <title>Carrinho de Compras</title>
     <link rel="stylesheet" href="Carrinho.css">
 </head>
 
@@ -29,9 +29,9 @@
     <main>
         <h1>Detalhes do Produto</h1>
         <div class="product">
-            <span>Nome do Produto</span>
-            <span>Preço: R$50.00</span>
-            <button class="botaoComprar" onclick="addToCart('Produto 1', 50)">Comprar</button>
+            <span id="nomeProduto"></span>
+            <span id="preco"></span>
+            <button class="botaoComprar">Comprar</button>
         </div>
 
         <div class="cart">
