--- a/src/pages/TelaDetalhesProdutos/DetalhesProdutos.html
+++ b/src/pages/TelaDetalhesProdutos/DetalhesProdutos.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,42 +11,30 @@
         <div class="imageLogo">
             <img src="/imagens/logo.png" alt="">
         </div>
-        <div class="pesquisarCampo">
-            <label for="">
-                <i class="fa fa-search"></i><input type="search" name="" id="">
-            </label>
-        </div>
-        <div class="menu-icon">
-            <h4>Seja Bem Vindo</h4>
-            <i class="fa fa-user"></i>
-            <ul>
-                <li>Usuário</li>
-            </ul>
-        </div>
     </nav>
     <main>
-        <script src="DetalhesProdutos.js"></script>
         <div class="produto-container">
             <div class="produto-detalhes">
                 <h2 id="nomeProduto">Nome do Produto</h2>
                 <p id="descricao">Descrição do Produto</p>
-                <p><strong>Valor:</strong> R$<span id="valor"></span></p>
-                <p><strong>Avaliação:</strong> <span id="avalicao"></span> </p>
+                <p><strong>Valor:</strong> R$<span id="valorProduto"></span></p>
+                <p><strong>Avaliação:</strong> <span id="avaliacao"></span></p>
 
                 <div class="produto-imagens">
                     <div class="imagem-principal">
-                        <!--Imagem principal-->
-                        <img id="imagemSelecionada" src="" alt="Imagem principal">
+                        <img id="imagemSelecionada" src="../../main/resources/static//images/banheiro2.jpg" alt="Imagem principal">
                     </div>
                     <div class="carrossel">
-                        <div class="miniaturas" id="miniaturas">
-                            <!--Miniaturas das imagens -->
-                        </div>
+                        <div class="miniaturas" id="miniaturas"></div>
                     </div>
                 </div>
-                <button class="botaoComprar" id="botaoComprar">Comprar</button>
+                
+                <a href="../../pages/Carrinho/Carrinho.html" target="_blank" rel="noopener noreferrer">
+                    <button  class="botaoComprar" id="botaoComprar">Comprar</button>
+                </a>
             </div>
         </div>
     </main>
+    <script src="DetalhesProdutos.js"></script>
 </body>
 </html>
