inclui tela de detalhes novamente dentro da mesmasmpastas

--- a/src/pages/TelaCadastroProduto/CadastroProduto.html
+++ b/src/pages/TelaCadastroProduto/CadastroProduto.html
@@ -37,7 +37,7 @@
         <div class="imagem-principal">
             <label for="imgPrincipalPreview">Imagem Principal:</label>
             <div id="imgPrincipalPreview">
-                <img id="imgPrincipal" src="#" alt="Nenhuma Imagem Selecionada">
+                <img id="imgPrincipal" src="#" alt="Nenhuma Imagem Selecionada" onclick="redirecionarParaDetalhes()">
             </div>
         </div>
     </div>
@@ -52,9 +52,7 @@
         <div id="etapaSelecao">
             <h3>Escolha a imagem Principal</h3>
             <div id="opcoesImagemPrincipal"></div>
-            
         </div>
-    </div>
-    
+    </div>  
 </body>
 </html>
