--- a/src/pages/AddUser/AddUser.html
+++ b/src/pages/AddUser/AddUser.html
@@ -6,15 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adicionar Usuário</title>
     <link rel="stylesheet" href="AddUser.css">
-<<<<<<< HEAD
-</head>
-
-<body>
-=======
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="../public/Globalcss/style.css"/>
+    <link rel="stylesheet" href="../public/Globalcss/style.css">
 </head>
 
 <body>
@@ -38,22 +33,13 @@
             </a>
         <!--Fim dos icones na tela-->
 
-
     </header>
     <!--Fim do topo header-->
 
->>>>>>> a48de40 (adicionado barra de navegacao nas telas)
     <div class="Form">
 
         <h1>Adicionar novo usuário</h1>
         <form id="userForm">
-<<<<<<< HEAD
-            <div class="imagemEsquerda">
-                <img src="https://static.vecteezy.com/system/resources/thumbnails/027/749/843/small/lofi-image-for-background-generative-ai-photo.jpg"
-                    alt="">
-            </div>
-=======
->>>>>>> a48de40 (adicionado barra de navegacao nas telas)
             <div class="informacoesDireita">
                 <label class="inputTexto">
                     <h3>Nome</h3>
