--- a/src/pages/AtualizarProduto/AtualizarProduto.html
+++ b/src/pages/AtualizarProduto/AtualizarProduto.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="AtualizarProduto.css">
-<<<<<<< HEAD
-    <title>Cadastro de listar_produtos</title>
-</head>
-<body onload="carregarProduto()">
-    <script src="AtualizarProduto.js"></script>
-=======
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="../public/Globalcss/style.css">
-    <title>Cadastro de listar_produtos</title>
+    <title>Atualizar produtos</title>
 </head>
-<body>
+<body onload="carregarProduto()">
     <script src="AtualizarProduto.js"></script>
 
     <header class="header">
@@ -36,12 +30,13 @@
             <a href="../Login/login.html" target="_parent">
                 <div class="fas fa-user" id="user-btn"></div>
             </a>
+        <div class="fas fa-shopping-cart" id="cart-btn"></div>
+        </div>
         <!--Fim dos icones na tela-->
 
     </header>
     <!--Fim do topo header-->
-    
->>>>>>> a48de40 (adicionado barra de navegacao nas telas)
+
     <div class="container">
         <div class="formulario">
             <form action="/produtos" method="post" enctype="multipart/form-data">
