--- a/src/pages/ListUsers/listaUsuarios.html
+++ b/src/pages/ListUsers/listaUsuarios.html
@@ -5,19 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="listaUsuarios.css">
-<<<<<<< HEAD
-=======
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="../public/Globalcss/style.css">
->>>>>>> a48de40 (adicionado barra de navegacao nas telas)
     <title>Lista de Usuários</title>
 </head>
 
 <body>
-<<<<<<< HEAD
-=======
 
     <header class="header">
         <!--Logo-->
@@ -27,7 +22,7 @@
 
         <!--Iniciando os icones na tela-->
         <nav class="navbar">
-            <a href="#">Home</a>
+            <a href="../Home/index.html">Home</a>
             <a href="Sobre nos/Sobre.html" target="_self">Saiba Mais</a>
             <a href="#product" target="_self">Loja</a>
 
@@ -57,7 +52,6 @@
     </header>
     <!--Fim do topo header-->
 
->>>>>>> a48de40 (adicionado barra de navegacao nas telas)
     <div class="container">
         <h1>Lista de Usuários</h1>
 
