--- a/src/pages/Login/login.html
+++ b/src/pages/Login/login.html
@@ -4,24 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login.css">
-<<<<<<< HEAD
-=======
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="../public/Globalcss/style.css">
->>>>>>> a48de40 (adicionado barra de navegacao nas telas)
     <title>Tela de Login</title>
 </head>
 
 <body>
     <script src="script.js"></script>
-<<<<<<< HEAD
-=======
 
     <header class="header">
         <!--Logo-->
-        <a href="#" class="logo">
+        <a href="../Home/index.html" class="logo">
             <img src="../Home/7.png" alt="">
         </a>
 
@@ -40,7 +35,8 @@
 
     </header>
     <!--Fim do topo header-->
->>>>>>> a48de40 (adicionado barra de navegacao nas telas)
+
+
     <div class="login">
         
         <form>
