--- a/src/pages/TelaCadastroProduto/CadastroProduto.html
+++ b/src/pages/TelaCadastroProduto/CadastroProduto.html
@@ -4,20 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="TelaCadastroProduto.css">
-<<<<<<< HEAD
-=======
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="../public/Globalcss/style.css">
->>>>>>> a48de40 (adicionado barra de navegacao nas telas)
-
-    <title>Cadastro de listar_produtos</title>
+    <title>Cadastro de produtos</title>
 </head>
+
 <body>
     <script src="TelaCadastroProduto.js"></script>
-<<<<<<< HEAD
-=======
 
     <header class="header">
         <!--Logo-->
@@ -27,7 +22,7 @@
 
         <!--Iniciando os icones na tela-->
         <nav class="navbar">
-            <a href="#">Home</a>
+            <a href="../Home/index.html">Home</a>
             <a href="Sobre nos/Sobre.html" target="_self">Saiba Mais</a>
             <a href="#product" target="_self">Loja</a>
 
@@ -36,28 +31,11 @@
             <a href="../Login/login.html" target="_parent">
                 <div class="fas fa-user" id="user-btn"></div>
             </a>
-        <div class="fas fa-search" id="search-btn"></div>
-        <div class="fas fa-shopping-cart" id="cart-btn"></div>
-        </div>
         <!--Fim dos icones na tela-->
-
-
-
-        <!--CAMPO DE BUSCA-->
-        <div class="search-form">
-            <label for="search-box" class="fas fa-search"></label>
-        </div>
-        <!--FIM DO CAMPO DE BUSCA-->
-
-        <!--incio de items no carrinho -->
-        <div class="cart-items-container">
-        </div>
-        <!--Fim dos items no carrinho -->
 
     </header>
     <!--Fim do topo header-->
 
->>>>>>> a48de40 (adicionado barra de navegacao nas telas)
     <div class="container">
         <div class="formulario">
             <form action="/produtos" method="post" enctype="multipart/form-data">
@@ -86,11 +64,7 @@
         <div class="imagem-principal">
             <label for="imgPrincipalPreview">Imagem Principal:</label>
             <div id="imgPrincipalPreview">
-<<<<<<< HEAD
-                <img id="imgPrincipal" src="#" alt="Nenhuma Imagem Selecionada" onclick="redirecionarParaDetalhes()">
-=======
                 <img id="imgPrincipal" src="#" alt="Nenhuma Imagem Selecionada">
->>>>>>> a48de40 (adicionado barra de navegacao nas telas)
             </div>
         </div>
     </div>
@@ -105,14 +79,9 @@
         <div id="etapaSelecao">
             <h3>Escolha a imagem Principal</h3>
             <div id="opcoesImagemPrincipal"></div>
-<<<<<<< HEAD
-        </div>
-    </div>  
-=======
             
         </div>
     </div>
     
->>>>>>> a48de40 (adicionado barra de navegacao nas telas)
 </body>
 </html>
