--- a/src/pages/Home/index.html
+++ b/src/pages/Home/index.html
@@ -56,7 +56,7 @@
         <h1 class="heading"> Novos <span>Produtos</span> </h1>
 
         <div class="box-container">
-<!-- 
+
                 <div class="box">
                     <div class="icons">
                         <a href="#" class="fas fa-shopping-cart"></a>
@@ -176,7 +176,7 @@
                         <div class="price">R$15.99 <span>R$20.99</span></div>
                         <button type="submit">Compra</button>
                     </div>
-                </div> -->
+                </div> 
                
 
 
