--- a/src/pages/TelaDetalhesProdutos/DetalhesProdutos.html
+++ b/src/pages/TelaDetalhesProdutos/DetalhesProdutos.html
@@ -5,13 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do produto</title>
     <link rel="stylesheet" href="DetalhesProdutos.css">
+    <link rel="stylesheet" href="../public/Globalcss/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
-    <nav>
-        <div class="imageLogo">
-            <img src="/imagens/logo.png" alt="">
+</head>
+
+<body onload="loadData()">
+    <header class="header">
+        <!--Logo-->
+        <a href="DetalhesProdutos.html" class="logo">
+            <img src="../Home/7.png" alt="">
+        </a>
+
+        <!--Iniciando os icones na tela-->
+        <nav class="navbar">
+            <a href="DetalhesProdutos.html">Home</a>
+            <a href="Sobre nos/Sobre.html" target="_self">Saiba Mais</a>
+            <a href="#product" target="_self">Loja</a>
+
+        </nav>
+        <div class="icons">
+            <a href="teste.html" target="_parent">
+                <div class="fas fa-user" id="user-btn"></div>
+            </a>
+        <div class="fas fa-search" id="search-btn"></div>
+        <div class="fas fa-shopping-cart" id="cart-btn"></div>
         </div>
-    </nav>
+        <!--Fim dos icones na tela-->
+
+
+
+        <!--CAMPO DE BUSCA-->
+        <div class="search-form">
+            <label for="search-box" class="fas fa-search"></label>
+        </div>
+        <!--FIM DO CAMPO DE BUSCA-->
+
+        <!--incio de items no carrinho -->
+        <div class="cart-items-container">
+        </div>
+        <!--Fim dos items no carrinho -->
+
+    </header>
     <main>
         <div class="produto-container">
             <div class="produto-detalhes">
