fix: home ajustada e tela de detalhes

--- a/src/pages/AtualizarProduto/AtualizarProduto.html
+++ b/src/pages/AtualizarProduto/AtualizarProduto.html
@@ -22,8 +22,7 @@
         <!--Iniciando os icones na tela-->
         <nav class="navbar">
             <a href="../Home/index.html">Home</a>
-            <a href="Sobre nos/Sobre.html" target="_self">Saiba Mais</a>
-            <a href="#product" target="_self">Loja</a>
+            <a href="../Home/index.html" target="_self">Loja</a>
 
         </nav>
         <div class="icons">
