--- a/src/pages/Home/index.html
+++ b/src/pages/Home/index.html
@@ -21,7 +21,6 @@
         <!--Iniciando os icones na tela-->
         <nav class="navbar">
             <a href="index.html">Home</a>
-            <a href="Sobre nos/Sobre.html" target="_self">Saiba Mais</a>
             <a href="#product" target="_self">Loja</a>
 
         </nav>
@@ -57,7 +56,7 @@
 
         <div class="box-container">
 
-                <div class="box">
+                <!-- <div class="box">
                     <div class="icons">
                         <a href="#" class="fas fa-shopping-cart"></a>
                         <a href="#" class="fas fa-heart"></a>
@@ -175,7 +174,7 @@
                         <h3>Logo Yamam</h3>
                         <div class="price">R$15.99 <span>R$20.99</span></div>
                         <button type="submit">Compra</button>
-                    </div>
+                    </div> -->
                 </div> 
                
 
