--- a/src/pages/TelaCadastroProduto/CadastroProduto.html
+++ b/src/pages/TelaCadastroProduto/CadastroProduto.html
@@ -56,7 +56,7 @@
 
                 <button type="button" onclick="abrirModal()">Adicionar Imagens</button><br><br>
 
-                <a href="../Home/telaPrincipal.html"><button type="button"> Cancelar</button></a>
+                <a href="../home-admin/telaPrincipal.html"><button type="button"> Cancelar</button></a>
 
                 <button type="button" onclick="validarCampos()">Salvar Produto</button>
             </form>
