--- a/src/pages/TelaCadastroProduto/TelaDetalhes/detalhes.html
+++ b/src/pages/TelaCadastroProduto/TelaDetalhes/detalhes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do produto</title>
-    <link rel="stylesheet" href="Detalhes.css">
+    <link rel="stylesheet" href="detalhes.css">
 </head>
 <body>
     <nav>
@@ -18,7 +18,7 @@
                 <h2 id="nomeProduto">Nome do Produto</h2>
                 <p id="descricao">Descrição do Produto</p>
                 <p><strong>Valor:</strong> R$<span id="valorProduto"></span></p>
-                <p><strong>Avaliação:</strong> <span id="avaliacao"></span></p>
+                <p><strong></strong> <span id="avaliacao"></span></p>
 
                 <div class="produto-imagens">
                     <div class="imagem-principal">
