--- a/src/pages/TelaCadastroProduto/TelaDetalhes/detalhes.html
+++ b/src/pages/TelaCadastroProduto/TelaDetalhes/detalhes.html
@@ -3,15 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhes do produto</title>
+    <title>Detalhes</title>
     <link rel="stylesheet" href="detalhes.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"/>
+<link rel="stylesheet" href="../../public/Globalcss/style.css">
 </head>
 <body>
-    <nav>
-        <div class="imageLogo">
-            <img src="/imagens/logo.png" alt="">
-        </div>
-    </nav>
+    <header class="header">
+        <!--Logo-->
+        <a href="../../Home/index.html" class="logo">
+            <img src="../../Home/7.png" alt="">
+        </a>
+
+        <!--Iniciando os icones na tela-->
+        <nav class="navbar">
+            <a href="../../Home/index.html">Home</a>
+            <a href="Sobre nos/Sobre.html" target="_self">Saiba Mais</a>
+            <a href="#product" target="_self">Loja</a>
+
+        </nav>
+        <div class="icons">
+            <a href="../../Login/login.html" target="_parent">
+                <div class="fas fa-user" id="user-btn"></div>
+            </a>
+        <!--Fim dos icones na tela-->
+
+    </header>
     <main>
         <div class="produto-container">
             <div class="produto-detalhes">
