--- a/src/pages/Home/index.html
+++ b/src/pages/Home/index.html
@@ -25,8 +25,11 @@
 
         </nav>
         <div class="icons">
-            <a href="teste.html" target="_parent">
+             <a href="../Login/login.html" target="_parent">
                 <div class="fas fa-user" id="user-btn"></div>
+            </a>
+            <a href="teste.html" target="_parent">
+                <div class="fa-solid fa-user-tie" id="user-btn"></div>
             </a>
         <div class="fas fa-search" id="search-btn"></div>
         <div class="fas fa-shopping-cart" id="cart-btn"></div>
