dia da apresentaçao

--- a/src/pages/ListaProdutos/listaProdutos.html
+++ b/src/pages/ListaProdutos/listaProdutos.html
@@ -45,8 +45,8 @@
         <!--FIM DO CAMPO DE BUSCA-->
 
         <!--incio de items no carrinho -->
-        <div class="cart-items-container">
-        </div>
+        <!-- <div class="cart-items-container">
+        </div> -->
         <!--Fim dos items no carrinho -->
 
     </header>
