Login and register client implemented

--- a/src/pages/Login/login.html
+++ b/src/pages/Login/login.html
@@ -43,7 +43,7 @@
     <div class="login">
         
         <form>
-        <h1>Login</h1>
+        <h1 id="title">Login de admin</h1>
         
         <label for="email">Digite seu usuario de login</label> <br>
         <input type="text" required placeholder="usuário" id="email">
