--- a/src/pages/Home/index.html
+++ b/src/pages/Home/index.html
@@ -28,9 +28,9 @@
              <a href="../Login/login.html" target="_parent">
                 <div class="fas fa-user" id="user-btn"></div>
             </a>
-            <!-- <a href="teste.html" target="_parent"> -->
-                <!-- <div class="fa-solid fa-user-tie" id="user-btn"></div>
-            </a> -->
+            <a href="../LoginCliente/loginCliente.html" target="_parent">
+                <div class="fa-solid fa-user-tie" id="user-btn"></div>
+            </a> 
         <div class="fas fa-search" id="search-btn"></div>
         <div class="fas fa-shopping-cart" id="cart-btn"></div>
         </div>
