create: update client

--- a/src/pages/AlterarCliente/AlterarCliente.html
+++ b/src/pages/AlterarCliente/AlterarCliente.html
@@ -142,9 +142,9 @@
                 <input type="password" name="senha" id="senha"  required>
 
                 <h3>Confirmar Senha</h3>
-                <input type="password" name="confirmSenha" id="confirmSenha" required>
+                <input type="password" name="confirmSenha" id="senha2" required>
         
-                <button type="button" onclick="addUser()">Alterar usuário</button>
+                <button id="botaoAlterar" type="button" onclick="AlterUser()">Alterar usuário</button>
             </div>
         </form>
     </div>
